some refactoring, realisation person-service, new containers added, added diagrams, fixed dashboard
